-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14
-
None
-
-
a96a64be2dc3110d140e43d2cf85454d9fc998b8 (qt/qtbase/5.12)
QT5 build failed due to error C2059 under "/std:c+latest"(C20)" in the development version of Visual C+. Could you help look at this? Thanks in advance! We use latest source code form QT5. Noted that this issue only found when compiles with unreleased vctoolset, that next release of MSVC will have this behavior.
Repro steps:
1. open a clean x86 prompt
2. git clone git://code.qt.io/qt/qt5.git D:\QT5\src
3. cd /d D:\QT5\src
4. git checkout dev
5. perl init-repository
6. set CL=/std:c++latest
7. configure -developer-build -opensource -release -nomake examples -nomake tests -skip qtwebengine -confirm-license
Acutal result:
D:\QT5\src\qtbase\qmake\generators\makefile.cpp(3424): error C2059: syntax error: 'requires'
D:\QT5\src\qtbase\qmake\generators\makefile.cpp(3425): error C2059: syntax error: 'requires'
D:\QT5\src\qtbase\qmake\generators\makefile.cpp(3425): error C2143: syntax error: missing ';' before '{'
D:\QT5\src\qtbase\qmake\generators\makefile.cpp(3426): error C2059: syntax error: 'requires'
For Gerrit Dashboard: QTBUG-77093 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
268193,3 | qmake: fix variable naming conflicts with C++20 keyword | dev | qt/qtbase | Status: ABANDONED | -1 | 0 |
268242,4 | qmake: fix variable naming conflicts with C++20 keyword | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |